<resources>
    <string name="app_name">Bullet Journal 2020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="habit_name">Habit Name</string>
    <string name="addTask" translatable="false">“Add” task to list</string>
    <string name="singleClickText" translatable="false">Click once to edit task</string>
    <string name="longClickText" translatable="false">Hold to delete task</string>
    <string name="howCalendar1" translatable="false">Select date on calendar</string>
    <string name="howCalendar2" translatable="false">Enter event name</string>
    <string name="howCalendar3" translatable="false">“Save“</string>
    <string name="howCalendar4" translatable="false">Click on calendar date to check</string>
    <string name="howGoogleCalendar1" translatable="false">Click “Google Calendar“ in menu</string>
    <string name="howGoogleCalendar2" translatable="false">Fill out details</string>
    <string name="howGoogleCalendar3" translatable="false">“Save“</string>
    <string name="howGoogleCalendar4" translatable="false">Review details on Google Calendar App</string>
    <string name="howTracker1" translatable="false">“Add“ habit</string>
    <string name="howTracker2" translatable="false">Update habit progress everyday</string>
    <string name="howTracker3" translatable="false">“Save“</string>
    <string name="howTracker4" translatable="false">Click once to increment/decrement progress</string>
    <string name="howTracker5" translatable="false">Hold to edit habit</string>
    <string name="howTracker6" translatable="false">(Type in digit first- do NOT increment/decrement first)</string>
    <string name="ok" translatable="false">OK</string>
</resources>