<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingTop="8dp"
    android:background="#A1B9EA">

    <TextView
        android:id="@+id/habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:textStyle="bold|italic"
        android:layout_marginBottom="8dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/number_layout"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habit_name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sunday_number"
            style="@style/NumberText" />

        <TextView
            android:id="@+id/monday_number"
            style="@style/NumberText" />

        <TextView
            android:id="@+id/tuesday_number"
            style="@style/NumberText" />

        <TextView
            android:id="@+id/wednesday_number"
            style="@style/NumberText" />

        <TextView
            android:id="@+id/thursday_number"
            style="@style/NumberText" />

        <TextView
            android:id="@+id/friday_number"
            style="@style/NumberText" />

        <TextView
            android:id="@+id/saturday_number"
            style="@style/NumberText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number_layout">

        <TextView
            android:id="@+id/text_sunday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/sunday" />

        <TextView
            android:id="@+id/text_monday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/monday" />

        <TextView
            android:id="@+id/text_tuesday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/tuesday" />

        <TextView
            android:id="@+id/text_wednesday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/wednesday" />

        <TextView
            android:id="@+id/text_thursday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/thursday" />

        <TextView
            android:id="@+id/text_friday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/friday" />

        <TextView
            android:id="@+id/text_saturday"
            android:textStyle="italic"
            style="@style/DayText"
            android:text="@string/saturday" />

    </LinearLayout>


</RelativeLayout>